--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/core": "^0.41.0",
     "@iconify-json/lucide": "^1.2.69",
     "@iconify-json/simple-icons": "^1.2.54",
+    "@n8n/chat": "^0.61.0",
     "@nuxt/ui": "^4.0.1",
     "@sidebase/nuxt-auth": "^1.1.0",
     "nuxt": "^4.1.3"
